--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,10 +29,10 @@
 			<!--<p>Login in. To see it in action.</p>-->
 			<form class="m-t" role="form" action="login" method="post">
 				<div class="form-group">
-					<input type="text" class="form-control" placeholder="输入账号" name="userName" required="" />
+					<input type="text" class="form-control" placeholder="输入账号" name="userName" required="" value="admin"/>
 				</div>
 				<div class="form-group">
-					<input type="password" class="form-control" placeholder="输入密码" name="password" required="" />
+					<input type="password" class="form-control" placeholder="输入密码" name="password" required="" value="admin"/>
 				</div>
 				<button type="submit" class="btn btn-primary block full-width m-b">登  录</button>
 				<a th:href="@{forget}" href="#"><small>忘记密码 ?</small></a>
